[package]
name = "candle-gen-joycaption"
version = "0.0.0"
edition = "2021"
description = "JoyCaption (LLaVA: SigLIP + Llama-3.1-8B) image-captioning provider crate for candle-gen — the Windows/CUDA sibling of mlx-gen-joycaption."
license = "Apache-2.0"
repository = "https://github.com/michaeltrefry/candle-gen"
keywords = ["candle", "cuda", "joycaption", "captioning", "inference"]
categories = ["science"]

[dependencies]
candle-gen = { path = "../candle-gen" }
inventory = { workspace = true }
# The unified LLM engine: serves the JoyCaption VLM as the `candle-llava` core-llm vision provider
# that this shim now consumes through the contract (sc-7692). Pinned to the SAME rev the SceneWorks
# worker pins so cargo unifies ONE candle-llm — one `candle_core::Tensor`, one `core-llm` — across the
# worker dependency graph. Both candle-gen and candle-llm pin the identical `candle-core` rev, so there
# is a single candle build and one `Tensor` type; `core-llm` is `branch = "main"` everywhere, so cargo
# locks one rev. The in-core SigLIP tower + projector + splice + Llama decoder that used to live here
# moved into candle-llm's `candle-llava` provider (story 7634).
# Bumped `8ab61c8` -> `54ef5a1` (sc-8002): the SceneWorks worker's mlx-llm bump pulls `core-llm` to the
# Qwen3.6 tool-calling API (`core_llm::Message.tool_calls` et al.); `54ef5a1` is the candle-llm rev that
# carries the matching wiring (candle-llm #35) so cargo still unifies ONE candle-llm in the worker graph.
# The shim's own `Message {…}` literals get `tool_calls: Vec::new()` for the new field (see src/lib.rs).
candle-llm = { git = "https://github.com/SceneWorks/candle-llm", rev = "54ef5a1ed43b8918f01858fe431bfec0eb2a3f25" }

[features]
default = []
# Forward the backend feature to candle-llm as well so the `candle-llava` provider's tower + decoder
# run on the selected device (the CUDA worker build needs candle-llm built with `cuda`).
metal = ["candle-gen/metal", "candle-llm/metal"]
cuda = ["candle-gen/cuda", "candle-llm/cuda"]
flash-attn = ["candle-gen/flash-attn"]

[dev-dependencies]
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
sceneworks-gen-core-testkit = { git = "https://github.com/michaeltrefry/mlx-gen", rev = "7468d03e761f02d4955da79009177f75f1221e0f" }
