[package]
name = "candle-gen-kolors"
version = "0.0.0"
edition = "2021"
description = "Kolors (SDXL UNet + ChatGLM3-6B encoder) provider crate for candle-gen — the Windows/CUDA sibling of mlx-gen-kolors."
license = "Apache-2.0"
repository = "https://github.com/michaeltrefry/candle-gen"
keywords = ["candle", "cuda", "diffusion", "kolors", "inference"]
categories = ["science"]

[dependencies]
# Core crate — re-exports gen_core + candle, so this provider links exactly one gen-core / candle
# build (single resolution; see scripts/check-gen-core-skew.sh).
candle-gen = { path = "../candle-gen" }
# Link-time self-registration into gen-core's model registry (the `inventory::submit!`).
inventory = { workspace = true }
# SDXL building blocks: the public `stable_diffusion::{unet_2d_blocks, embeddings, vae}` modules.
# Kolors keeps the SDXL UNet skeleton + SDXL VAE; this crate composes those blocks and adds only the
# Kolors deltas (the `encoder_hid_proj` context projection + the 5632-wide `text_time` add-embedding).
candle-transformers = { workspace = true }
# ChatGLM3 prompt tokenization. The fast `tokenizer.json` is loaded from the snapshot's `tokenizer/`
# dir (materialized by Kolors' `tools/build_kolors_tokenizer.py`, mirroring the mlx provider), and
# this wrapper applies the ChatGLM framing (GMASK/SOP prefix + left-pad + position_ids).
tokenizers = { workspace = true }
# Deterministic CPU-seeded initial noise (sc-3673 parity) — NOT candle's CUDA `randn`.
rand = { workspace = true }
rand_distr = { workspace = true }

[features]
# Pass the backend selection through to the core crate AND candle-transformers so a downstream
# `--features metal`/`cuda` on this provider crate selects the matching candle backend everywhere.
default = []
metal = ["candle-gen/metal", "candle-transformers/metal"]
cuda = ["candle-gen/cuda", "candle-transformers/cuda"]
flash-attn = ["candle-gen/flash-attn", "candle-transformers/flash-attn"]

[dev-dependencies]
# `examples/kolors-txt2img.rs` smoke driver only — encode the produced `gen_core::Image` (RGB8) to
# PNG so a real GPU run can be eyeballed. Not a library dependency (the worker owns asset writes).
image = { version = "0.25", default-features = false, features = ["png"] }
# gen-core conformance suite (sc-4481): drives this provider through the public Generator contract
# (cancel / progress / seed-determinism / capability honesty). Pinned to the SAME gen-core rev the
# workspace pins so it shares one contract build. Used by tests/conformance.rs (cuda-gated,
# #[ignore]d — it runs a real generate, so it needs weights + GPU).
sceneworks-gen-core-testkit = { git = "https://github.com/michaeltrefry/mlx-gen", rev = "db08076c1195f4a648ad336252f680e62d04716b" }
